--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -8,17 +8,17 @@
         <div id="popup">
             <!-- Setup view (shown on first use) -->
             <div id="setup-view" class="hidden">
-                <h2>Welcome to Kaya</h2>
+                <h2>Welcome to Save Button</h2>
                 <p class="setup-intro">
-                    Enter your Kaya server details to get started.
+                    Enter your Save Button server details to get started.
                 </p>
 
                 <div class="form-group">
-                    <label for="setup-server">Kaya Server</label>
+                    <label for="setup-server">Save Button Server</label>
                     <input
                         type="url"
                         id="setup-server"
-                        placeholder="https://kaya.town"
+                        placeholder="https://savebutton.com"
                     />
                 </div>
 
